Se crean entidades nuevas y se agrega el proyecto curricular al validador de la expedicion
